fixed the overflow property

--- a/CSS/twitter.css
+++ b/CSS/twitter.css
@@ -109,7 +109,7 @@ a {
     border-bottom: 1px solid #dde3e7;
     padding: 0.5em;
     float: left;
-    overflow: scroll;
+    overflow: auto;
 }
 .media-image {
     width: 50px;
